POR/RefEdge/src/objects/Content_Attribute__c.object
<CustomObject>
    <description>Junction object for Attribute and Reference Content.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field would contain the Account Id if the attribute is added from the Account</description>
        <inlineHelpText>This field would contain the Account Id if the attribute is added from the Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Related_Reference_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipName>Content_Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_fromMapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mapped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Content__c</fullName>
        <label>Reference Content</label>
        <referenceTo>Reference_Content__c</referenceTo>
        <relationshipName>Content_Attributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Content Attribute</label>
    <nameField>
        <displayFormat>CAN-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>